# intelligentsia

./: .gitignore  Project.toml  README.md  pyproject.toml
intelligentsia/forecasters/: adahedge.py
src/: Intelligentsia.jl  __init__.py
src/forecasters/: Forecasters.jl  __init__.py  adahedge.py  forecasters.jl
tests/: forecasters_tests.jl  runtests.jl
tests/forecasters/: test_adahedge.py
