[tool.poetry]
name = "intelligentsia"
version = "0.1.0"
description = "Polyglot machine learning software, with a heavy focus on online learning/online convex optimization."
license = "Apache-2.0"
authors = ["Arnold Salas <asalas@virgointellectual.com>"]
readme = "README.md"
repository = "https://github.com/virgointellectual/intelligentsia"
packages = [{include = "Lib/intelligentsia/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
